service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      app.openshift.io/vcs-ref: "6.8"
      app.openshift.io/vcs-uri: https://github.com/RedHat-EMEA-SSA-Team/end-to-end-developer-workshop.git
      jkube.io/git-branch: "6.8"
      jkube.io/git-commit: 86e03ceb9fdac60851acdde3e06fe2fc8fb22fc9
      jkube.io/git-url: https://github.com/RedHat-EMEA-SSA-Team/end-to-end-developer-workshop.git
      prometheus.io/path: /metrics
      prometheus.io/port: "9779"
      prometheus.io/scrape: "true"
    labels:
      app: catalog
      app.kubernetes.io/instance: catalog
      app.kubernetes.io/part-of: coolstore
      component: catalog
      group: com.redhat.cloudnative
      provider: jkube
      version: 1.0-SNAPSHOT
    name: catalog-coolstore
  spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: catalog
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
