route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      app.openshift.io/vcs-ref: "6.8"
      app.openshift.io/vcs-uri: https://github.com/RedHat-EMEA-SSA-Team/end-to-end-developer-workshop.git
      jkube.io/git-branch: "6.8"
      jkube.io/git-commit: 86e03ceb9fdac60851acdde3e06fe2fc8fb22fc9
      jkube.io/git-url: https://github.com/RedHat-EMEA-SSA-Team/end-to-end-developer-workshop.git
      openshift.io/host.generated: "true"
    labels:
      app: coolstore
      app.kubernetes.io/instance: catalog
      app.kubernetes.io/part-of: coolstore
      component: catalog
      group: com.redhat.cloudnative
      provider: jkube
      version: 1.0-SNAPSHOT
    name: catalog-coolstore
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: catalog-coolstore
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
kind: List
metadata:
  resourceVersion: ""
